@@ -146,8 +146,8 @@
                 var file = e.Argument as string;
                 if(file == null)
                     throw new ArgumentNullException(Resources.NoFile, new Exception(Resources.NoFile));
-                var hfile = file.Equals("latest.exe?raw=true", StringComparison.CurrentCultureIgnoreCase) ? "PS3DumpChecker.exe" : string.Format("default{0}", file.Substring(file.LastIndexOf('.')));
-                var url = GetFinalUrl(string.Format("{0}/{1}", "https://github.com/Swizzy/PS3DumpChecker/raw/master/Latest%20Compiled%20Version", hfile));
+                var hfile = file.Equals("latest.exe", StringComparison.CurrentCultureIgnoreCase) ? "PS3DumpChecker.exe" : string.Format("default{0}", file.Substring(file.LastIndexOf('.')));
+                var url = GetFinalUrl(string.Format("{0}/{1}?raw=true", "https://github.com/Swizzy/PS3DumpChecker/raw/master/Latest%20Compiled%20Version", hfile));
                 var wc = new WebClient();
                 wc.DownloadFile(url, file);
             }
